--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/register": "^7.13.14",
     "gulp": "^4.0.2",
+    "gulp-image": "^6.2.1",
     "gulp-pug": "^4.0.1",
     "gulp-webserver": "^0.9.1"
   },
