--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gulp": "^4.0.2",
     "gulp-image": "^6.2.1",
     "gulp-pug": "^4.0.1",
-    "gulp-webserver": "^0.9.1"
+    "gulp-sass": "^4.1.0",
+    "gulp-webserver": "^0.9.1",
+    "node-sass": "^5.0.0"
   },
   "dependencies": {
     "del": "^6.0.0"
