--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/register": "^7.13.14",
+    "babelify": "^10.0.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-bro": "^2.0.0",
+    "gulp-csso": "^4.0.1",
     "gulp-image": "^6.2.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
@@ -23,7 +27,6 @@
     "node-sass": "^5.0.0"
   },
   "dependencies": {
-    "del": "^6.0.0",
-    "gulp-csso": "^4.0.1"
+    "uglifyify": "^5.0.2"
   }
 }
